--- a/myproject/circlelens/templates/circlelens/search_result.html
+++ b/myproject/circlelens/templates/circlelens/search_result.html
@@ -51,6 +51,8 @@
                         	<h1>소속 : {{where}}</h1>
                         	<h1>동아리 소개</h1><br>
                         	<p>{{introduce}}</p>
+							<h1>관련 동아리 추천</h1>
+							<p>{{recom}}</p>
 						</section>
 
 					</div>
