--- a/myproject/circlelens/templates/circlelens/index.html
+++ b/myproject/circlelens/templates/circlelens/index.html
@@ -135,12 +135,12 @@
 				</div>
 		</div>
 		<!-- Scripts -->
-			<script src="C:\projects\datathon\myproject\circlelens\static\assets\js\jquery.min.js"></script>
-			<script src="C:\projects\datathon\myproject\circlelens\static\assets\js\jquery.dropotron.min.js"></script>
-			<script src="C:\projects\datathon\myproject\circlelens\static\assets\js\browser.min.js"></script>
-			<script src="C:\projects\datathon\myproject\circlelens\static\assets\js\breakpoints.min.js"></script>
-			<script src="C:\projects\datathon\myproject\circlelens\static\assets\js\util.js"></script>
-			<script src="C:\projects\datathon\myproject\circlelens\static\assets\js\main.js"></script>
+			<script src="assets\js\jquery.min.js"></script>
+			<script src="assets\js\jquery.dropotron.min.js"></script>
+			<script src="assets\js\browser.min.js"></script>
+			<script src="assets\js\breakpoints.min.js"></script>
+			<script src="assets\js\util.js"></script>
+			<script src="assets\js\main.js"></script>
 	</body>
 
 
